bump java to 21